      "auto" devices appearing after "/etc/init.d/networking start" already
      ran.  (LP: #1374521)
    - Add Get-RTC-is-in-local-time-setting-from-etc-default-rc.patch: In
      Ubuntu we currently keep the setting whether the RTC is in local or UTC
      time in /etc/default/rcS "UTC=yes|no", instead of /etc/adjtime.
      (LP: #1377258)

    Upgrade fixes, keep until 16.04 LTS release:
    - systemd Conflicts/Replaces/Provides systemd-services.
    - Remove obsolete systemd-logind upstart job.
    - Clean up obsolete /etc/udev/rules.d/README on upgrades. (LP: #1381655)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 28 Nov 2014 16:26:18 +0100

systemd (217-1) experimental; urgency=medium

  [ Martin Pitt ]
  * New upstream release. Drop all cherry-picked patches and port the Debian
    specific ones.
  * Disable systemd-resolved for now. It still needs to mature, and
    integration into Debian should be discussed first.
  * Bump util-linux dependency to >= 2.25 as per NEWS.
  * Drop installation of 50-firmware.rules, not shipped upstream any more.
    Firmware loading is now exclusively done by the kernel.
  * Drop installation of readahead related services and code, readahead got
    dropped in this version.
  * Ship new networkctl CLI tool.
  * debian/libsystemd0.symbols: Add new symbols from this release.
  * debian/rules: Call dpkg-gensymbols with -c4 to immediately spot
    changed/missing symbols during build.
  * boot-and-services autopkgtest: Test AppArmor confined units (LP #1396270)
  * Create new "systemd-journal-remote" system group, for
    systemd-tmpfiles-setup.service.

  [ Marc Deslauriers ]
  * Build-depend on libapparmor-dev to enable AppArmor support. (LP: #1396270)

  [ Didier Roche ]
  * Handle display-manager transitions: (Closes: #748668)
    - Add a generator to ensure /etc/X11/default-display-manager is controlling
      which display-manager is started.
    - Modify insserv generator to mask of sysvinit-only dms with insserv