@@ -47,3 +47,6 @@ usr/lib/sysctl.d/
 usr/lib/systemd/
 usr/lib/tmpfiles.d/
 usr/share/locale/
+
+# Ubuntu
+../../extra/systemd.py usr/share/apport/package-hooks
